# intel-camera-dev-support

./: Makefile.am  README.md  configure.ac
android_support/: CallStack.cpp  CameraMetadata.cpp  Log.cpp  Makefile.am  Properties.cpp  RefBase.cpp  Scheduling.cpp  libutils.pc.in
android_support/androidheaders/binder/: Binder.h
android_support/androidheaders/camera/: CameraMetadata.h
android_support/androidheaders/cutils/: atomic.h  intel_atomic.h  trace.h
android_support/androidheaders/hardware/: gralloc.h
android_support/androidheaders/mediautils/: SchedulingPolicyService.h
android_support/androidheaders/system/: graphics.h
android_support/cutils/: Android.mk
android_support/cutils/arch-x86_64/: cache.h
android_support/gralloc/: fake_gralloc.h  gralloc.cpp  gralloc_priv.h  mapper.cpp
android_support/ui/: Fence.cpp  GraphicBufferAllocator.cpp  GraphicBufferMapper.cpp  Rect.cpp  Region.cpp
android_support/ui/tests/src/: heap-gralloc-test.cpp
icamera_adapter/: Errors.h  ICamera.h  ICameraAdapter.cpp  ICameraAdapter.h  LibraryFunctions.cpp  LogHelper.cpp  LogHelper.h  Makefile.am  ParameterAdapter.cpp  ParameterAdapter.h  Parameters.cpp  Parameters.h  RWLock.h  ScopedAtrace.h  configure.ac
pvl/pvl-cvtrace/: configure.ac
pvl/pvl-cvtrace/src/: Makefile.am  README.txt  common.c  common.h  cv_trace_gui.c  cv_trace_gui.glade  cv_trace_gui_glade.h
pvl/pvl-gst/: Makefile.am  configure.ac
pvl/pvl-gst/gst/: Makefile.am
pvl/pvl-gst/gst-libs/: Makefile.am
pvl/pvl-gst/gst-libs/pvl/: Makefile.am  pvl_face_detection_meta.c  pvl_face_detection_meta.h  pvl_face_recognition_meta.c  pvl_face_recognition_meta.h
pvl/pvl-gst/gst/pvl/: Makefile.am  gst_pvl_face_detection_filter.c  gst_pvl_face_detection_filter.h  gst_pvl_face_recognition_filter.c  gst_pvl_face_recognition_filter.h  gst_pvl_filter.c  gst_pvl_util.c  gst_pvl_util.h
pvl/pvl-gst/rpm/: README  build_rpm.sh  pvl-gst.spec
unittests/: Makefile.am  camera_subsys_test_linux.sh  configure.ac  unittest.supp
unittests/src/: hal_module_basic_tests.cpp  main.cpp  raw_hal_test.h  raw_hal_test_jpeg_resolution.cpp  raw_hal_test_yuv_resolution.cpp  raw_hal_tests.cpp  supported_streams_test.cpp  test_parameterization.cpp  test_parameterization.h  test_stream_factory.cpp  test_stream_factory.h  test_utils.h  valgrind_test.cpp
